welcome.lessons.welcome.array.array123.Array123.scala.error
array123:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if(indexOfValue(nums,2)!=(-1) && nums(indexOfValue(nums,2)-1)==1 && nums(indexOfValue(nums,2)+1)==3){
        ^